<resources>
    <string name="app_name" translatable="false">Guitar pickup</string>
    <string name="no_camera_access" translatable="false">Please grant camera permissions.</string>
    <string name="title_activity_lighting">lighting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="my_files">My Files</string>
    <string name="shared">Shared</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>