<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:orientation="vertical">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="170dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register"
                        android:textColor="#ED2121" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/mail"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/usrusr"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="Username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/pswrdd"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/confpss"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/signupButton"
                        style="@style/loginButton"
                        android:layout_gravity="center"
                        android:text="Register" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/signup_login_hint"
                        android:textAlignment="center"
                        android:textColor="#ED2121"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="ImageContrastCheck" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>