<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:orientation="vertical">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="170dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:background="@color/loginBkColor"
                    android:padding="@dimen/loginViewsMargin">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Login"
                        android:textColor="#ED2121" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:backgroundTint="#ED2121"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/viewParent"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"
                        android:onClick="viewForgotPAssword"
                        android:text="Forgot Password?"
                        android:textColor="#ED2121"
                        android:textSize="@dimen/newsMoreTextSize" />

                    <Button
                        android:id="@+id/signButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Login" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:minHeight="48dp"
                        android:onClick="viewRegisterClicked"
                        android:text="@string/login_signup_hint"
                        android:textAlignment="center"
                        android:textColor="#ED2121"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>